--- a/src/Style/LogInStyle/login.css
+++ b/src/Style/LogInStyle/login.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;/*  */
-    width: 600px;
+    width: 400px;
+    border-radius: 20px;
     height: 500px;
     padding: 30px;
     background-color: rgba(0, 0, 0, 0.4);
@@ -19,7 +20,7 @@
 }
 
 .login {
-    background-image: url('../../Assets/form1.png');
+    background-image: url('../../Assets/home.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
@@ -27,99 +28,5 @@
     justify-content: center;
     align-items: center;
     height: 725px;
-}
-
-.login .sbn {
-    width: 500px;
-    height: 500px;
-    padding: 30px;
-    background-color: rgba(215, 203, 219, 0.4);
-}
-
-.sbn {
-    padding-left: 1em;
-    width: 100%;
-    z-index: 2;
-}
-
-.sbn>.sbn-inner {
-    display: inline-block;
-}
-
-@keyframes text-clip {
-    from {
-        clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
-    }
-
-    to {
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    }
-}
-
-@keyframes outer-left {
-    from {
-        transform: translateX(20%);
-    }
-
-    to {
-        transform: none;
-    }
-}
-
-@keyframes inner-left {
-    from {
-        transform: translateX(-50%);
-    }
-
-    to {
-        transform: none;
-    }
-}
-
-@keyframes inp-right {
-    from {
-        transform: translateX(100%);
-    }
-
-    to {
-        transform: none;
-    }
-}
-
-/* .grt,
-.sbo {
-    animation: outer-left 1s 1s cubic-bezier(0.5, 0, 0.1, 1) both;
-} */
-
-
-.sbn-inner {
-    display: inline-block;
-    animation: inner-left 1s 1s ease both;
-}
-
-.grt-inner {
-    display: inline-block;
-    animation: inner-left 1s 1s ease both,
-        text-clip 1s 0s cubic-bezier(0.5, 0, 0.1, 1) both;
-}
-
-.sbo-inner {
-    font-size: 24px;
-    animation: text-clip 1s 0s cubic-bezier(0.5, 0, 0.1, 1) both;
-}
-
-/* .sbn {
-    animation: outer-left 1s 1s ease both;
-} */
-
-.grt>.grt-inner {
-    display: inline-block;
-}
-
-.sbo {
-    display: inline-block;
-}
-
-.login>form {
-    animation: outer-left 1s 1s ease both;
+    background-color: transparent;
 }
